$followMouse is now configurable

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,10 +2,11 @@
 # https://wiki.hypr.land/Configuring/
 
 # Defaults, please don't edit. Change settings.conf instead.
-$xwayland   = true
-$mainMod    = SUPER
-$browser    = firefox --new-window -P default-release
-$webapp     = firefox --new-window -P kiosk --no-remote --kiosk
+$xwayland       = true
+$mainMod        = SUPER
+$browser        = firefox --new-window -P default-release
+$webapp         = firefox --new-window -P kiosk --no-remote --kiosk
+$followMouse    = 1
 
 source = ~/.config/hypr/settings.conf
 
@@ -203,7 +204,7 @@ input {
     kb_options = grp:win_space_toggle
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = $followMouse
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -234,18 +235,18 @@ xwayland {
 ###################
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, return, exec, $terminal
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod SHIFT, Q, killactive
-bind = $mainMod, B, exec, $browser
-bind = CTRL ALT, backspace, exec, uwsm stop
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bindd = $mainMod, return, Open Terminal, exec, $terminal
+bindd = $mainMod, T, Open Terminal, exec, $terminal
+bindd = $mainMod SHIFT, Q, Kill Active Window, killactive
+bindd = $mainMod, B, Open Web Browser, exec, $browser
+bindd = CTRL ALT, backspace, Terminate Wayland Server, exec, uwsm stop
+bindd = $mainMod, E, Open Filemanager, exec, $fileManager
+bindd = $mainMod, V, Toggle Window Floating, togglefloating,
 bindd = $mainMod, D, app-launcher, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, F, fullscreen
-bind = $mainMod, J, togglesplit, # dwindlew
-bind = $mainMod, L, exec, loginctl lock-session
+bindd = $mainMod, F, Toggle Fullscreen, fullscreen
+bindd = $mainMod, J, Toggle Splitmode, togglesplit, # dwindlew
+bindd = $mainMod, L, Lock System, exec, loginctl lock-session
 
 # Resize active window
 bind = $mainMod, minus, resizeactive, -100 0
