--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -3,20 +3,32 @@
 # Configure Xwayland to support X11 applications which aren't ported to Wayland (yet).
 # https://wiki.archlinux.org/title/Wayland#Xwayland
 # Default: true
-$xwayland   = true
+$xwayland       = true
 
 # Configure main key modifier (used <MOD> + D to open launcher).
 # See https://wiki.hypr.land/Configuring/Keywords/
 # Default: SUPER
-$mainMod    = SUPER
+$mainMod        = SUPER
+
+# Specify if and how cursor movement should affect window focus. See the note below. [0/1/2/3]
+# https://wiki.hypr.land/Configuring/Variables/#input
+# 0 - Cursor movement will not change focus.
+# 1 - Cursor movement will always change focus to the window under the cursor.
+# 2 - Cursor focus will be detached from keyboard focus. Clicking on a window will move keyboard focus to that window.
+# 3 - Cursor focus will be completely separate from keyboard focus. Clicking on a window will not change keyboard focus.
+# Default: 1
+$followMouse    = 1
 
 # Configure browser. Please select one and uncomment the $browser/$webapp parameters;
-# Default: firefox
+# Default: Firefox
 
 # Firefox
-$browser    = firefox --new-window -P default
-$webapp     = firefox --new-window -P kiosk --no-remote --kiosk
+# IMPORTANT: Ensure to create the kiosk profile with command: `firefox --createProfile kiosk`
+$browser        = firefox --new-window -P default
+$webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 
 # Vivaldi
-#$browser    = vivaldi --ozone-platform=wayland --new-window
-#$webapp     = $browser --app=
+#$browser        = vivaldi --ozone-platform=wayland --new-window
+#$webapp         = $browser --app=
+
+follow_mouse
