allow to set custom (default) background

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.local/share/backgrounds/0.png
-wallpaper = ,~/.local/share/backgrounds/0.png
+preload = ~/.local/share/backgrounds/default
+wallpaper = ,~/.local/share/backgrounds/default
