--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@
 /.local/share/*
 !/.local/share/applications
 !/.local/share/backgrounds
+/.local/share/backgrounds/default
 !/.local/share/icons
 !/readme.md
