--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -41,7 +41,7 @@ label {
 # Time
 label {
     monitor =
-    text = cmd[update:1000] echo "<span>$(date +"- %I:%M -")</span>"
+    text = cmd[update:1000] echo "<span>$(date +"- %H:%M -")</span>"
     color = rgba(216, 222, 233, 0.70)
     font_size = 20
     font_family = SF Pro Display Bold
