various updates (taskbar + wallpaper support)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,9 +33,8 @@ $menu = uwsm app -- rofi -show drun -run-command ".local/bin/webapp {cmd}" -drun
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-exec-once = firefox --createProfile kiosk; firefox --createProfile default
+exec-once = swww-daemon                                                 # pacman -S swww
 exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
-exec-once = systemctl --user enable --now hyprpaper.service             # pacman -S hyprpaper
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
 exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
 exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
@@ -379,8 +378,8 @@ windowrule = opacity 0.90 0.94, class:foot
 # Steam specific exceptions
 windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
 
-
 windowrule = float,class:qalculate-gtk
+windowrule = float,class:waypaper
 
 windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
 
