updated status bar regarding wifi signal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -378,8 +378,11 @@ windowrule = opacity 0.90 0.94, class:foot
 # Steam specific exceptions
 windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
 
-windowrule = float,class:qalculate-gtk
-windowrule = float,class:waypaper
+windowrulev2 = float,class:qalculate-gtk
+windowrulev2 = float,class:waypaper
+windowrulev2 = float,class:nwg-displays
+windowrulev2 = float,class:blueman-manager
+windowrulev2 = float,class:org.pulseaudio.pavucontrol
 
 windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
 
