cleaned up toolbar

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -23,10 +23,10 @@
   "modules-right": [
     "group/group-tray",
     "pulseaudio",
-    "temperature",
+//    "temperature",
     "cpu",
     "memory",
-    "hyprland/language",
+//    "hyprland/language",
     "battery",
     "battery#bat2",
     "bluetooth",
@@ -188,11 +188,11 @@
       "warning": 30,
       "critical": 15
     },
-    "format": "{icon}  {capacity}%",
-    "format-full": "{icon}  {capacity}%",
-    "format-charging": "  {capacity}%",
-    "format-plugged": "  {capacity}%",
-    "format-alt": "{time}  {icon}",
+    "format": "{icon} {capacity}%",
+    "format-full": "{icon} {capacity}%",
+    "format-charging": " {capacity}%",
+    "format-plugged": " {capacity}%",
+    "format-alt": "{time} {icon}",
     "format-icons": [
       "",
       "",
