--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -28,5 +28,5 @@ $browser        = firefox --new-window -P default
 $webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 
 # Vivaldi
-#$browser        = vivaldi --ozone-platform=wayland --new-window
+#$browser        = vivaldi --enable-features=UseOzonePlatform --ozone-platform=wayland --new-window
 #$webapp         = $browser --app=
