added networkmanager GUI

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -380,6 +380,7 @@ windowrule = workspace 10, content game, decorate off, noinitialfocus, suppresse
 
 windowrulev2 = float,class:qalculate-gtk
 windowrulev2 = float,class:waypaper
+windowrulev2 = float,class:com.network.manager
 windowrulev2 = float,class:nwg-displays
 windowrulev2 = float,class:blueman-manager
 windowrulev2 = float,class:org.pulseaudio.pavucontrol
