added swwwd and defaults for waypaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,12 +33,14 @@ $menu = uwsm app -- rofi -show drun -run-command ".local/bin/webapp {cmd}" -drun
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-exec-once = swww-daemon                                                 # pacman -S swww
+exec-once = systemctl --user enable --now swwwd.service                #  pacman -S swww
 exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
 exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
 exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
 exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
+
+exec-once = test ! -f ~/.config/waypaper/config.ini && cp ~/.config/waypaper/config.example.ini ~/.config/waypaper/config.ini && waypaper --restore
 
 # Configure dark-theme
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
@@ -399,6 +401,13 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = prop nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule = nofocus, class:^(xwaylandvideobridge)$
 
 # Generated and managed by ngw-displays
 source = ~/.config/hypr/workspaces.conf
