--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,14 @@
 /.config/hypr/monitors.conf
 /.config/hypr/workspaces.conf
 !/.config/rofi
+!/.config/systemd
+/.config/systemd/*
+!/.config/systemd/user
+/.config/systemd/user/*/*
+!/.config/systemd/*
 !/.config/waybar
+!/.config/waypaper
+/.config/waypaper/config.ini
 !/.local
 /.local/*
 !/.local/bin
