don't directly shutdown the PC on accident click

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -50,10 +50,15 @@
       "transition-left-to-right": false
     },
     "modules": [
+      "custom/power-control",
       "custom/power",
-      "custom/lock",
-      "custom/reboot"
+      "custom/reboot",
+      "custom/lock"
     ]
+  },
+  "custom/power-control": {
+    "format": "",
+    "tooltip": false
   },
   "custom/lock": {
     "format": "",
