fixed icons for the Proton applications

--- a/.local/share/applications/Links/ProtonCalendar.desktop
+++ b/.local/share/applications/Links/ProtonCalendar.desktop
@@ -2,6 +2,6 @@
 Version=1.0
 Name=Proton Calendar
 URL=https://calendar.proton.me/
-Icon=proton-mail
+Icon=~/.local/share/applications/Links/ProtonCalendar.svg
 Type=Link
 
