added a rules.conf file for custom rules

--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -19,6 +19,9 @@ $mainMod        = SUPER
 # Default: 1
 $followMouse    = 1
 
+# The default terminal to use for keybind $mainMod + ENTER|T
+$terminal       = foot
+
 # Configure browser. Please select one and uncomment the $browser/$webapp parameters;
 # Default: Firefox
 
