--- a/.config/hypr/rules.example.conf
+++ b/.config/hypr/rules.example.conf
@@ -1,2 +1,11 @@
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+
+# Start steam (and related) content on workspace 10
+#windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
+
+# Start the terminal when workspace 5 is being created (see settings.example.conf for existing variables)
+#workspace = 5, on-created-empty:$terminal
+
+# Assign a custom icon for workspace 1 - https://fontawesome.com/icons
+#workspace = 1, defaultName:<span weight="normal"></span>
