--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,6 +4,7 @@
 # Defaults, please don't edit. Change settings.conf instead.
 $xwayland       = true
 $mainMod        = SUPER
+$terminal       = foot
 $browser        = firefox --new-window -P default-release
 $webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 $followMouse    = 1
@@ -24,16 +25,18 @@ source = ~/.config/hypr/workspaces.conf
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$terminal = uwsm app -- foot                                            # pacman -S foot fish
+$terminal = uwsm app -- $terminal
 $fileManager = uwsm app -- nautilus --new-window                        # pacman -S nautilus
 $browser = uwsm app -- $browser
-$menu = uwsm app -- rofi -show drun -run-command ".local/bin/webapp {cmd}" -drun-url-launcher "$webapp"
+$menu = uwsm app -- rofi -show drun -drun-url-launcher "$webapp"
 
 #################
 ### AUTOSTART ###
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
+exec-once = hyprpm reload -n
+
 exec-once = systemctl --user enable --now swwwd.service                #  pacman -S swww
 exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
@@ -83,7 +86,7 @@ ecosystem {
 
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
 #####################
@@ -368,41 +371,13 @@ bind = $mainMod SHIFT, PRINT, exec, hyprshot -z -m region
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Float and center file pickers
-windowrule = float, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
-windowrule = center, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
-
-# Just dash of opacity
-windowrule = opacity 0.90 0.94, class:foot
-
-# Steam specific exceptions
-windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
-
-windowrulev2 = float,class:qalculate-gtk
-windowrulev2 = float,class:waypaper
-windowrulev2 = float,class:com.network.manager
-windowrulev2 = float,class:nwg-displays
-windowrulev2 = float,class:blueman-manager
-windowrulev2 = float,class:org.pulseaudio.pavucontrol
-
-windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
-
-# Force browser into a tile mode
-windowrulev2 = tile, class:Vivaldi-stable
-windowrulev2 = fullscreenstate 0 2, class:Vivaldi-stable, fullscreen:1
-windowrulev2 = syncfullscreen 0, class:Vivaldi-stable
-windowrulev2 = fullscreenstate 0 2, class:firefox, fullscreen:1
-windowrulev2 = syncfullscreen 0, class:firefox
-
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = prop nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# https://wiki.hypr.land/Useful-Utilities/Screen-Sharing/#xwayland
 windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
 windowrule = noanim, class:^(xwaylandvideobridge)$
 windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
@@ -410,8 +385,26 @@ windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrule = noblur, class:^(xwaylandvideobridge)$
 windowrule = nofocus, class:^(xwaylandvideobridge)$
 
-#windowrule = float, class:com-group_finity-mascot-Main
-#windowrule = noblur, class:com-group_finity-mascot-Main
-#windowrule = nofocus, class:com-group_finity-mascot-Main
-#windowrule = noshadow, class:com-group_finity-mascot-Main
-#windowrule = noborder, class:com-group_finity-mascot-Main
+# Float and center file pickers
+windowrule = float, title:^(Open.*Files?|Save.*Files?|All Files|Save).*$
+windowrule = center, size 50% 50%, title:^(Open.*Files?|Save.*Files?|All Files|Save).*$
+
+# Just dash of opacity
+windowrule = opacity 0.90 0.94, class:^(foot|Alacritty|kitty)$
+
+# Force browser into a tile mode
+windowrule = tile, class:vivaldi-stable
+windowrule = fullscreenstate 0 2, class:vivaldi-stable, fullscreen:1
+windowrule = syncfullscreen 0, class:vivaldi-stable
+windowrule = fullscreenstate 0 2, class:firefox, fullscreen:1
+windowrule = syncfullscreen 0, class:firefox
+
+# Some dash of floating for various (setting) apps
+windowrule = float, class:qalculate-gtk
+windowrule = float, class:waypaper
+windowrule = float, class:com.network.manager
+windowrule = float, class:nwg-displays
+windowrule = float, class:blueman-manager
+windowrule = float, class:org.pulseaudio.pavucontrol
+
+source = ~/.config/hypr/rules.conf
