--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,14 +37,15 @@ $menu = uwsm app -- rofi -show drun -drun-url-launcher "$webapp"
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 exec-once = hyprpm reload -n
 
-exec-once = systemctl --user enable --now swwwd.service                #  pacman -S swww
+exec-once = systemctl --user enable --now swwwd.service                 # pacman -S swww waypaper
 exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
 exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
 exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
 exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
 
-exec-once = test ! -f ~/.config/waypaper/config.ini && cp ~/.config/waypaper/config.example.ini ~/.config/waypaper/config.ini && waypaper --restore
+exec-once = test ! -f ~/.config/waypaper/config.ini && cp ~/.config/waypaper/config.example.ini ~/.config/waypaper/config.ini
+exec-once = sleep 1 && waypaper --restore
 
 # Configure dark-theme
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
@@ -88,6 +89,11 @@ ecosystem {
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
 permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
+plugin {
+  hyprhook {
+    fullscreen = sh -c 'for s in /tmp/mpv-socket-*; do [ -S "$s" ] && echo "{ \"command\": [\"cycle\", \"pause\"] }" | socat - "$s" >/dev/null; done'
+  }
+}
 
 #####################
 ### LOOK AND FEEL ###
