hyprland plugin seems to be unstable; replaced with systemd timer/service

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -85,15 +85,9 @@ ecosystem {
 #   enforce_permissions = 1
 }
 
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
+permission = /usr/(bin|local/bin)/grim, screencopy, allow
+permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
 permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-plugin {
-  hyprhook {
-    fullscreen = sh -c 'for s in /tmp/mpv-socket-*; do [ -S "$s" ] && echo "{ \"command\": [\"cycle\", \"pause\"] }" | socat - "$s" >/dev/null; done'
-  }
-}
 
 #####################
 ### LOOK AND FEEL ###
