removed the uwsm requirement

--- a/.config/waypaper/config.example.ini
+++ b/.config/waypaper/config.example.ini
@@ -1,6 +1,7 @@
 [Settings]
 language = en
 folder = ~/Pictures
+         ~/Videos
          ~/.local/share/backgrounds
 	     /usr/share/backgrounds
 monitors = All
