--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,27 +25,24 @@ source = ~/.config/hypr/workspaces.conf
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$terminal = uwsm app -- $terminal
-$fileManager = uwsm app -- nautilus --new-window                        # pacman -S nautilus
-$browser = uwsm app -- $browser
-$menu = uwsm app -- rofi -show drun -drun-url-launcher "$webapp"
+$fileManager = nautilus --new-window                        # pacman -S nautilus
+$menu = rofi -show drun -drun-url-launcher "$webapp"
 
 #################
 ### AUTOSTART ###
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-exec-once = hyprpm reload -n
+# exec-once = hyprpm reload -n
 
-exec-once = systemctl --user enable --now swwwd.service                 # pacman -S swww waypaper
-exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
-exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
-exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
-exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
-exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
+exec-once = swaync
+exec-once = hypridle
+exec-once = /usr/lib/hyprpolkitagent
+exec-once = swww-daemon --no-cache
+exec = pkill waybar; waybar
+exec-once = waypaper --restore
 
-exec-once = test ! -f ~/.config/waypaper/config.ini && cp ~/.config/waypaper/config.example.ini ~/.config/waypaper/config.ini
-exec-once = sleep 1 && waypaper --restore
+#exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
 
 # Configure dark-theme
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
@@ -244,7 +241,7 @@ bindd = $mainMod, return, Open Terminal, exec, $terminal
 bindd = $mainMod, T, Open Terminal, exec, $terminal
 bindd = $mainMod SHIFT, Q, Kill Active Window, killactive
 bindd = $mainMod, B, Open Web Browser, exec, $browser
-bindd = CTRL ALT, backspace, Terminate Wayland Server, exec, uwsm stop
+bindd = CTRL ALT, backspace, Terminate Wayland Server, exit
 bindd = $mainMod, E, Open Filemanager, exec, $fileManager
 bindd = $mainMod, V, Toggle Window Floating, togglefloating,
 bindd = $mainMod, D, app-launcher, exec, $menu
