added option to add custom links to launcher

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ source = ~/.config/hypr/workspaces.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $fileManager = nautilus --new-window                        # pacman -S nautilus
-$menu = rofi -show drun -drun-url-launcher "$webapp"
+$menu = rofi -show combi -modes "combi,window,ssh" -combi-modes ":~/.config/rofi/links.sh '$webapp',drun"
 
 #################
 ### AUTOSTART ###
