--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,15 @@
 !/.config/waybar
 !/.config/waypaper
 /.config/waypaper/config.ini
+!/.config/webapp
+/.config/webapp/*
+!/.config/webapp/disabled
 !/.local
 /.local/*
 !/.local/bin
 !/.local/docs
 !/.local/share
 /.local/share/*
-!/.local/share/applications
 !/.local/share/backgrounds
 /.local/share/backgrounds/default
 !/.local/share/icons
