added more shutdown options

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -241,7 +241,7 @@ bindd = $mainMod, return, Open Terminal, exec, $terminal
 bindd = $mainMod, T, Open Terminal, exec, $terminal
 bindd = $mainMod SHIFT, Q, Kill Active Window, killactive
 bindd = $mainMod, B, Open Web Browser, exec, $browser
-bindd = CTRL ALT, backspace, Terminate Wayland Server, exit
+bindd = CTRL ALT, backspace, Terminate Wayland Server, exec, ~/.config/hypr/scripts/power.sh
 bindd = $mainMod, E, Open Filemanager, exec, $fileManager
 bindd = $mainMod, V, Toggle Window Floating, togglefloating,
 bindd = $mainMod, D, app-launcher, exec, $menu
