simplified waybar layout, made the kb_layout configurable.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ $terminal       = foot
 $browser        = firefox --new-window -P default-release
 $webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 $followMouse    = 1
+$kb_layout      = us
 
 source = ~/.config/hypr/settings.conf
 
@@ -200,7 +201,7 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us,ru
+    kb_layout = $kb_layout
     kb_variant =
     kb_model =
     kb_options = grp:win_space_toggle
