--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -10,6 +10,11 @@ $xwayland       = true
 # Default: SUPER
 $mainMod        = SUPER
 
+# Configure keyboard layout(s). Can be switched with $mainMod + SPACE
+# https://wiki.hypr.land/Configuring/Variables/#input
+# Default: us
+$kb_layout      = us
+
 # Specify if and how cursor movement should affect window focus. See the note below. [0/1/2/3]
 # https://wiki.hypr.land/Configuring/Variables/#input
 # 0 - Cursor movement will not change focus.
