foot is no longer the default terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 # Defaults, please don't edit. Change settings.conf instead.
 $xwayland       = true
 $mainMod        = SUPER
-$terminal       = foot
+$terminal       = alacritty
 $browser        = firefox --new-window -P default-release
 $webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 $followMouse    = 1
