--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -25,7 +25,7 @@ $kb_layout      = us
 $followMouse    = 1
 
 # The default terminal to use for keybind $mainMod + ENTER|T
-$terminal       = foot
+$terminal       = alacritty
 
 # Configure browser. Please select one and uncomment the $browser/$webapp parameters;
 # Default: Firefox
