made keyboard layout configurable.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,13 +2,11 @@
 # https://wiki.hypr.land/Configuring/
 
 # Defaults, please don't edit. Change settings.conf instead.
-$xwayland       = true
-$mainMod        = SUPER
-$terminal       = alacritty
-$browser        = firefox --new-window -P default-release
-$webapp         = firefox --new-window -P kiosk --no-remote --kiosk
-$followMouse    = 1
-$kb_layout      = us
+source = ~/.config/hypr/settings.example.conf
+
+input {
+    kb_options = grp:win_space_toggle
+}
 
 source = ~/.config/hypr/settings.conf
 
@@ -199,23 +197,6 @@ misc {
 ### INPUT ###
 #############
 
-# https://wiki.hypr.land/Configuring/Variables/#input
-input {
-    kb_layout = $kb_layout
-    kb_variant =
-    kb_model =
-    kb_options = grp:win_space_toggle
-    kb_rules =
-
-    follow_mouse = $followMouse
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = false
@@ -392,8 +373,8 @@ windowrule = opacity 0.90 0.94, class:^(foot|Alacritty|kitty)$
 
 # Force browser into a tile mode
 windowrule = tile, class:vivaldi-stable
-windowrule = fullscreenstate 0 2, class:vivaldi-stable, fullscreen:1
-windowrule = syncfullscreen 0, class:vivaldi-stable
+windowrule = fullscreenstate 0 2, class:^(v|V)ivaldi.*$, fullscreen:1
+windowrule = syncfullscreen 0, class:^(v|V)ivaldi.*$
 windowrule = fullscreenstate 0 2, class:firefox, fullscreen:1
 windowrule = syncfullscreen 0, class:firefox
 
