added keyboard documentation

--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -8,10 +8,10 @@ $mainMod        = SUPER
 # Configure keyboard layout(s). Can be switched with $mainMod + SPACE
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout   = us
-    kb_variant  = # intl
-    kb_model    =
-    kb_rules    =
+    kb_layout   = us                    # See: localectl list-x11-keymap-layouts
+    kb_variant  = #intl                 # See: localectl list-x11-keymap-variants [layout]
+    kb_model    =                       # See: localectl list-x11-keymap-models
+    kb_rules    =                       # See: /usr/share/X11/xkb/rules/base.lst
 
     # Specify if and how cursor movement should affect window focus. See the note below. [0/1/2/3]
     # 0 - Cursor movement will not change focus.
