added clipboard history

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source = ~/.config/hypr/workspaces.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $fileManager = nautilus --new-window                        # pacman -S nautilus
-$menu = rofi -show combi -modes "combi,window,ssh" -combi-modes ":~/.config/rofi/links.sh '$webapp',drun"
+$menu = rofi -show combi -modes "combi,window,:~/.config/rofi/cliphist-img.sh,ssh" -combi-modes ":~/.config/rofi/links.sh '$webapp',drun"
 
 #################
 ### AUTOSTART ###
@@ -38,6 +38,8 @@ exec-once = swaync
 exec-once = hypridle
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = swww-daemon --no-cache
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 exec = pkill waybar; waybar
 exec-once = waypaper --restore
 
@@ -226,6 +228,7 @@ bindd = $mainMod, B, Open Web Browser, exec, $browser
 bindd = CTRL ALT, backspace, Terminate Wayland Server, exec, ~/.config/hypr/scripts/power.sh
 bindd = $mainMod, E, Open Filemanager, exec, $fileManager
 bindd = $mainMod, V, Toggle Window Floating, togglefloating,
+bindd = $mainMod, H, Show Clipboard History, exec, rofi -modi clipboard:~/.config/rofi/cliphist-img.sh -show clipboard -show-icons
 bindd = $mainMod, D, app-launcher, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bindd = $mainMod, F, Toggle Fullscreen, fullscreen
