--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -15,7 +15,7 @@
     "custom/launcher",
     "hyprland/workspaces",
     "gamemode",
-    "mpris"
+    "group/group-media"
   ],
 //  "modules-center": [
 //
@@ -59,6 +59,15 @@
       "balanced": "",
       "power-saver": ""
     }
+  },
+  "group/group-media": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 600,
+      "transition-left-to-right": true,
+      "click-to-reveal": true
+    },
+    "modules": ["mpris", "mpris#extended"]
   },
   "group/group-tray": {
     "orientation": "inherit",
@@ -230,20 +239,24 @@
   },
   "mpris": {
     "interval": 1,
-    "format": "{status_icon} <b>{title}</b> <span alpha='60%'>by</span> {artist} <span alpha='60%'>on</span> {album} <span alpha='60%'>[{position}/{length}]</span>",
-    "on-click-middle": "",
+    "format": "{status_icon} <span alpha='60%'>[{position}/{length}]</span> <b>{title}</b>",
     "player-icons": {
       "default": ""
     },
-    "title-len": 20,
-    "artist-len": 20,
-    "album-len": 20,
-    "enable-tooltip-len-limits": true,
-    "ellipsis": ".",
     "status-icons": {
       "playing": "",
       "paused": "",
       "stopped": ""
+    }
+  },
+  "mpris#extended": {
+    "interval": 1,
+    "format": "<span alpha='60%'>by</span> {artist} <span alpha='60%'>on</span> {album}",
+    "on-click": "",
+    "on-click-middle": "",
+    "on-click-right": "",
+    "player-icons": {
+      "default": ""
     }
   }
 }
