More concise wording + Additional instruction (class retrieval)

--- a/.config/hypr/rules.example.conf
+++ b/.config/hypr/rules.example.conf
@@ -1,5 +1,7 @@
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
+# See: https://wiki.hypr.land/Configuring/Window-Rules/
+#      https://wiki.hypr.land/Configuring/Workspace-Rules/
+#
+# Window properties lists (incl. 'class'): `hyprctl clients`
 
 # Start steam (and related) content on workspace 10
 #windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
