added chromium example

--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -44,6 +44,10 @@ $terminal       = alacritty
 $browser        = firefox --new-window -P default
 $webapp         = firefox --new-window -P kiosk --no-remote --kiosk
 
+# Chromium
+#$browser        = chromium --enable-features=UseOzonePlatform --ozone-platform=wayland --new-window
+#$webapp         = $browser --app=
+
 # Vivaldi
 #$browser        = vivaldi --enable-features=UseOzonePlatform --ozone-platform=wayland --new-window
 #$webapp         = $browser --app=
